Navbar now fixed as it is more beneficial on smaller viewports & added a media query for text size in search area for smaller viewports too

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,6 +168,9 @@ p {
            font-size: 50px;
            margin-top: 0px;
        }
+       #search {
+         font-size: smaller;
+       }
    }
 
    /* Form field */
